<resources>
    <string name="app_name">ChatApp_Ume</string>
    <string name="forgot_your_password">Did someone forgot their password?</string>
    <string name="email">Email/phone</string>
    <string name="say_something">Its ok..</string>
    <string name="say_something2">Just enter your email and then remake your new password!</string>
    <string name="next">Next</string>
    <string name="new_password">New Password</string>
    <string name="confirm">Confirm password</string>
    <string name="please_enter_your_new_password">Enter your new password</string>
    <string name="warning_confirm_password">Password dose\'nt match</string>
    <string name="warning_password_character">Your password must be 6 characters long</string>
    <string name="fill_the_blank">Hmm…what is your new password!?</string>
    <string name="verify_code">Please enter verify code to continue.</string>
    <string name="btnVerify">VERIFY CODE</string>
    <string name="check">Check</string>
    <string name="Congratulation">Yay!! You have finished creating your new password and have fun</string>
    <string name="Complete">Ok !</string>
    <string name="Update_Password">Update</string>
    <string name="text_Password_Updated">PASSWORD UPDATED</string>
    <string name="imgDescription">This is a image description</string>
    <string name="imgBackDescription">Arrow back description</string>
    <string name="password">Password</string>
    <string name="Email_Phone">Email/Phone</string>


    <!--NAVIGATION-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!--     Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Setting</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_profile">Profile</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>

    <string name="privacy_policy">Privacy Policy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_friend">Friends</string>
    <string name="nav_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="login"><u>Login</u></string>
</resources>