<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DoneActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/rubik"
        android:text="@string/text_Password_Updated"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <ImageView
        android:id="@+id/imgCircle"
        android:layout_width="133dp"
        android:layout_height="128dp"
        android:layout_marginTop="9dp"
        android:contentDescription="@string/imgDescription"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@drawable/circle"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imgDone"
        android:layout_width="98dp"
        android:layout_height="82dp"
        android:contentDescription="@string/check"
        app:layout_constraintBottom_toBottomOf="@+id/imgCircle"
        app:layout_constraintEnd_toEndOf="@+id/imgCircle"
        app:layout_constraintStart_toStartOf="@+id/imgCircle"
        app:layout_constraintTop_toTopOf="@+id/imgCircle"
        app:srcCompat="@drawable/avd_done"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/rubik_light"
        android:text="@string/Congratulation"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imgCircle"
        app:layout_constraintStart_toStartOf="@+id/imgCircle"
        app:layout_constraintTop_toBottomOf="@+id/imgCircle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUpdate"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="9dp"
        android:text="@string/Complete"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        android:backgroundTint="#F01E1C1C"
        android:textColor="@color/white"
        android:background="@drawable/custom_button2"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="93dp" />

</androidx.constraintlayout.widget.ConstraintLayout>



