<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentNewPasswordLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPasswordActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_your_new_password"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:layout_constraintVertical_bias="0.086" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutPass"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/please_enter_your_new_password"
        android:textColorHint="#0B0B0B"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:helperTextTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FD000000"
            android:fontFamily="@font/rubik"
            android:inputType="textPassword"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutConfirmPass"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm"
        android:textColorHint="#0B0B0B"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:helperTextTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/txtInputLayoutPass"
        app:layout_constraintStart_toStartOf="@+id/txtInputLayoutPass"
        app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutPass"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FD000000"
            android:fontFamily="@font/rubik"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSubmitNewPass"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/Update_Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutConfirmPass" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="160dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="196dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="253dp" />


</androidx.constraintlayout.widget.ConstraintLayout>