<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".MainActivity"
    tools:ignore="HardcodedText">


    <ImageView
        android:layout_width="191dp"
        android:layout_height="190dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/imgDescription"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,ImageContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtUserAccount"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="#39C6A097"
        android:hint="@string/Email_Phone"
        android:textColorHint="#020000"
        app:endIconTint="@color/black"
        app:helperTextTextColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline11"
        app:startIconDrawable="@drawable/ic_people"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:textStyle="bold"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPassword"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#39C6A097"
        android:hint="@string/password"
        android:textColorHint="#0B0B0B"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:helperTextTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/txtUserAccount"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtUserAccount"
        app:layout_constraintTop_toBottomOf="@+id/txtUserAccount"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:inputType="textPassword"
            android:textStyle="bold"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/color_corner_button"
        android:fontFamily="@font/rubik"
        android:rotation="0"
        android:text="Sign in"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:backgroundTint="#CE000000"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        tools:ignore="UnknownId,TextContrastCheck" />

    <TextView
        android:id="@+id/txtForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:fontFamily="@font/rubik"
        android:text="Forgot password"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/color_corner_button"
        android:fontFamily="@font/rubik"
        android:text="Login"
        android:textColor="#533A33"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtPassword"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="@+id/txtPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="222dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="597dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="317dp" />

    <!--<Button
        android:id="@+id/btnClose"
        android:layout_width="86dp"
        android:layout_height="48dp"
        android:rotation="0"
        android:text="Thoát"
        android:textStyle="bold"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.735"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />-->

</androidx.constraintlayout.widget.ConstraintLayout>

